added Touchstone animations and TimeoutTransitionGroup

--- a/app/less/main_ext.less
+++ b/app/less/main_ext.less
@@ -5,3 +5,8 @@
 // Icons
 @import "font-icons/style.css";
 
+// Animations from touchstone
+@import "touchstone/vendor-prefixes";
+@import "touchstone/variables";
+@import "touchstone/animations";
+@import "touchstone/view";
