--- a/app/less/main_ext.less
+++ b/app/less/main_ext.less
@@ -10,3 +10,27 @@
 @import "touchstone/variables";
 @import "touchstone/animations";
 @import "touchstone/view";
+
+
+//.view-left {
+//  float: left;
+//  width: 320px;
+//  border-right: 1px solid #b2b2b2;
+//}
+//.view-main {
+//  width: ~"-webkit-calc(100% - 321px)";
+//  width: ~"-moz-calc(100% - 321px)";
+//  width: ~"-ms-calc(100% - 321px)";
+//  width: ~"calc(100% - 321px)";
+//}
+//@media (max-width:768px) {
+//  .view-left {
+//    width: 240px;
+//  }
+//  .view-main {
+//    width: ~"-webkit-calc(100% - 241px)";
+//    width: ~"-moz-calc(100% - 241px)";
+//    width: ~"-ms-calc(100% - 241px)";
+//    width: ~"calc(100% - 241px)";
+//  }
+//}
